Making progress on how to add new data to existing user

--- a/new-pompeius/new-pompeius/Base.lproj/Main.storyboard
+++ b/new-pompeius/new-pompeius/Base.lproj/Main.storyboard
@@ -289,6 +289,9 @@
                                 <rect key="frame" x="79" y="739" width="256" height="61"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="Group 2"/>
+                                <connections>
+                                    <action selector="continueButton:" destination="2Y7-1a-zwb" eventType="touchUpInside" id="Aes-Vf-top"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="09s-qz-bAX">
                                 <rect key="frame" x="140" y="182" width="115" height="115"/>
@@ -296,7 +299,7 @@
                                 <state key="normal" image="Group 136"/>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Age" translatesAutoresizingMaskIntoConstraints="NO" id="f0Y-MX-0gj">
-                                <rect key="frame" x="39" y="375" width="31" height="16"/>
+                                <rect key="frame" x="39" y="374" width="31" height="16"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Height" translatesAutoresizingMaskIntoConstraints="NO" id="guf-Z2-rVQ">
@@ -316,13 +319,30 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Occupation" translatesAutoresizingMaskIntoConstraints="NO" id="syM-wN-S1H">
-                                <rect key="frame" x="41" y="318" width="69" height="36"/>
+                                <rect key="frame" x="39" y="309" width="69" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="center" minimumFontSize="17" background="Rectangle 2" translatesAutoresizingMaskIntoConstraints="NO" id="og8-KX-WGr">
+                                <rect key="frame" x="208" y="309" width="176" height="43"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Error" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Eul-Z1-pQH">
+                                <rect key="frame" x="41" y="633" width="343" height="33"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" systemColor="systemRedColor" red="1" green="0.23137254900000001" blue="0.18823529410000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <viewLayoutGuide key="safeArea" id="6mX-fv-58B"/>
                     </view>
+                    <connections>
+                        <outlet property="errorLabel" destination="Eul-Z1-pQH" id="1hY-G4-pbH"/>
+                        <outlet property="occupationTextField" destination="og8-KX-WGr" id="Cu2-p8-3Ol"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Usm-xa-SBT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -548,6 +568,7 @@
         <image name="My Profile-1" width="63" height="19"/>
         <image name="Occupation" width="66" height="16"/>
         <image name="Rectangle 1" width="256" height="61"/>
+        <image name="Rectangle 2" width="256" height="61"/>
         <image name="Register" width="256" height="61"/>
         <image name="Register with Google" width="256" height="61"/>
         <image name="Settings-2" width="101" height="37"/>
